[package]
name = "pythonic-helper"
version = "0.1.1"
edition = "2021"
description = "A library that provides Python-like functions (and some surprises)"
license = "MIT"
repository = "https://github.com/xsamueljr/pythonic-helper"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
